[package]
name = "pakoda"
version = "0.1.0"
authors = ["sn99 <siddharthn.099@gmail.com>"]
license-file = "LICENSE"
readme = "README.md"
repository = "https://github.com/sn99/pakoda"
edition = "2018"
description = "A compiler written in Rust"
#build="build.rs"

[badges]
travis-ci = { repository = "sn99/pakoda", branch = "master" }

[dependencies]
regex = "=1.3.6"
libc = "0.2.65"

[build-dependencies]
cc = "*"
bindgen = "0.53.1"
